add many features to market page

--- a/src/components/charts/buyBox/buyBox.css
+++ b/src/components/charts/buyBox/buyBox.css
@@ -14,7 +14,8 @@
 h3 {
     color: white;
 }
-.list-group-buy {
+
+/* .list-group-buy {
     /* border: 1px solid red; */
     /* width: 18rem; */
-}
+/* }  */
