start to code Team page

--- a/src/components/pages/Market/market.css
+++ b/src/components/pages/Market/market.css
@@ -2,6 +2,7 @@
     /* border: 1px solid blue; */
     width: 12rem;
     align-self: flex-start;
+    /* background-color: #fff; */
 }
 
 .image-players{
